<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color1"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/ln"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_margin="10dp"
            android:background="@drawable/bgradius"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/avatar"
                    app:civ_border_color="#B3FFFFFF"
                    app:civ_border_width="2dp" />

                <RelativeLayout
                    android:id="@+id/camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="#d3d6db"
                        app:civ_border_color="#1A000000"
                        app:civ_border_width="2dp">

                    </de.hdodenhof.circleimageview.CircleImageView>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_camera" />
                </RelativeLayout>
            </RelativeLayout>


            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/duysnipper1103"
                android:textColor="@color/colorBlack2"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/address"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edtaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/name_adress"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edtnameemployees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/phone"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edtphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/updateinformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:padding="14dp"
                android:text="@string/update"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:padding="@dimen/dp_5"
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Skip"
                android:textColor="#2D46D1"
                android:textSize="20dp"
                android:textStyle="bold"></TextView>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>